# minitest

./: .gitignore  Makefile.in  README.md  configure.ac
.github/workflows/: MacOS.yml  Ubuntu.yml  Windows.yml
inc/: assertions.h  autogen.h  common.h  extensions.h  macros.h  minitest.h  mock.h  setup.h  testsuite.h
scripts/: autogenh.rb  watch.sh
src/: assertions.c  log.c  main.c  minitest.c  mocks.c  output.c
test/: assertions_test.c  core_test.c  extensions_test.c  fixtures_test.c  main.c  mocks_test.c  setup.c  signals_test.c  support.c
