AC_INIT(minitest, version-0.1)

AC_PROG_CC([gcc])

export LD_LIBRARY_PATH='/usr/local/include:/usr/local/lib:/c/MinGW/msys/1.0/local/include:/c/MinGW/msys/1.0/local/lib'
export CFLAGS='-I/usr/local/lib -I/usr/local/include -I/c/MinGW/msys/1.0/local/include'

AC_SUBST(CFLAGS, '-I/usr/local/lib -I/usr/local/include -I/c/MinGW/msys/1.0/local/include -Iinc')

AC_OUTPUT(Makefile)